--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\rafael.carmignotto\AppData\Local\Temp\testng-eclipse--602842740\testng-customsuite.xml</span>
+                    <span>C:\Users\rafael.carmignotto\AppData\Local\Temp\testng-eclipse--126590650\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,12 +102,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="br.com.rsi.hub3.automacao.tdd.testes.TesteConsultaHome" hash-for-method="TesteConsultaHomeNegativo">TesteConsultaHomeNegativo</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="br.com.rsi.hub3.automacao.tdd.testes.TesteLogin" hash-for-method="TesteLoginNegativo">TesteLoginNegativo</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="br.com.rsi.hub3.automacao.tdd.testes.TesteConsultaHome" hash-for-method="TesteConsultaHomePositivo">TesteConsultaHomePositivo</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="br.com.rsi.hub3.automacao.tdd.testes.TesteLogin" hash-for-method="TesteLoginPositivo">TesteLoginPositivo</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -125,21 +125,21 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">br.com.rsi.hub3.automacao.tdd.testes.TesteConsultaHome</span>
+              <span class="class-name">br.com.rsi.hub3.automacao.tdd.testes.TesteLogin</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="TesteConsultaHomeNegativo">
-                  </a> <!-- TesteConsultaHomeNegativo -->
-                  <span class="method-name">TesteConsultaHomeNegativo</span>
+                  <a name="TesteLoginNegativo">
+                  </a> <!-- TesteLoginNegativo -->
+                  <span class="method-name">TesteLoginNegativo</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="TesteConsultaHomePositivo">
-                  </a> <!-- TesteConsultaHomePositivo -->
-                  <span class="method-name">TesteConsultaHomePositivo</span>
+                  <a name="TesteLoginPositivo">
+                  </a> <!-- TesteLoginPositivo -->
+                  <span class="method-name">TesteLoginPositivo</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -147,7 +147,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\rafael.carmignotto\AppData\Local\Temp\testng-eclipse--602842740\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\rafael.carmignotto\AppData\Local\Temp\testng-eclipse--126590650\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -156,7 +156,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;br.com.rsi.hub3.automacao.tdd.testes.TesteConsultaHome&quot;/&gt;
+      &lt;class name=&quot;br.com.rsi.hub3.automacao.tdd.testes.TesteLogin&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -198,18 +198,18 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'TesteConsultaHomePositivo')
-data.setCell(0, 2, 'br.com.rsi.hub3.automacao.tdd.testes.TesteConsultaHome')
-data.setCell(0, 3, 2125);
+data.setCell(0, 1, 'TesteLoginNegativo')
+data.setCell(0, 2, 'br.com.rsi.hub3.automacao.tdd.testes.TesteLogin')
+data.setCell(0, 3, 1955);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'TesteConsultaHomeNegativo')
-data.setCell(1, 2, 'br.com.rsi.hub3.automacao.tdd.testes.TesteConsultaHome')
-data.setCell(1, 3, 107);
+data.setCell(1, 1, 'TesteLoginPositivo')
+data.setCell(1, 2, 'br.com.rsi.hub3.automacao.tdd.testes.TesteLogin')
+data.setCell(1, 3, 1866);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 seconds</span>
+              <span class="suite-total-time">Total running time: 3 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -235,30 +235,30 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">br.com.rsi.hub3.automacao.tdd.testes.TesteConsultaHome</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">br.com.rsi.hub3.automacao.tdd.testes.TesteLogin</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">inicializar</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">TesteConsultaHomeNegativo</span>
-                <span class="method-start">8543 ms</span>
+                <span class="method-name">TesteLoginNegativo</span>
+                <span class="method-start">8242 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">finalizar</span>
-                <span class="method-start">8650 ms</span>
+                <span class="method-start">10198 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">inicializar</span>
-                <span class="method-start">9583 ms</span>
+                <span class="method-start">11624 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">TesteConsultaHomePositivo</span>
-                <span class="method-start">17427 ms</span>
+                <span class="method-name">TesteLoginPositivo</span>
+                <span class="method-start">19527 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">finalizar</span>
-                <span class="method-start">19552 ms</span>
+                <span class="method-start">21393 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
