--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d5878c">  <td>20/03/26 17:24:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TesteLogin.inicializar()[pri:0, instance:br.com.rsi.hub3.automacao.tdd.testes.TesteLogin@21507a04]">&gt;&gt;inicializar</td> 
-<td>&nbsp;</td>  <td>main@2039810346</td>   <td></td> </tr>
-<tr bgcolor="d5878c">  <td>20/03/26 17:25:05</td>   <td>8242</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TesteLogin.TesteLoginNegativo()[pri:0, instance:br.com.rsi.hub3.automacao.tdd.testes.TesteLogin@21507a04]">TesteLoginNegativo</td> 
-  <td>main@2039810346</td>   <td></td> </tr>
-<tr bgcolor="d5878c">  <td>20/03/26 17:25:07</td>   <td>10198</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TesteLogin.finalizar()[pri:0, instance:br.com.rsi.hub3.automacao.tdd.testes.TesteLogin@21507a04]">&lt;&lt;finalizar</td> 
-<td>&nbsp;</td>  <td>main@2039810346</td>   <td></td> </tr>
-<tr bgcolor="d5878c">  <td>20/03/26 17:25:08</td>   <td>11624</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TesteLogin.inicializar()[pri:0, instance:br.com.rsi.hub3.automacao.tdd.testes.TesteLogin@21507a04]">&gt;&gt;inicializar</td> 
-<td>&nbsp;</td>  <td>main@2039810346</td>   <td></td> </tr>
-<tr bgcolor="d5878c">  <td>20/03/26 17:25:16</td>   <td>19527</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TesteLogin.TesteLoginPositivo()[pri:0, instance:br.com.rsi.hub3.automacao.tdd.testes.TesteLogin@21507a04]">TesteLoginPositivo</td> 
-  <td>main@2039810346</td>   <td></td> </tr>
-<tr bgcolor="d5878c">  <td>20/03/26 17:25:18</td>   <td>21393</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TesteLogin.finalizar()[pri:0, instance:br.com.rsi.hub3.automacao.tdd.testes.TesteLogin@21507a04]">&lt;&lt;finalizar</td> 
-<td>&nbsp;</td>  <td>main@2039810346</td>   <td></td> </tr>
+<tr bgcolor="d5878c">  <td>20/03/27 16:50:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TesteCadastro.inicializar()[pri:0, instance:br.com.rsi.hub3.automacao.tdd.testes.TesteCadastro@3a079870]">&gt;&gt;inicializar</td> 
+<td>&nbsp;</td>  <td>main@603443293</td>   <td></td> </tr>
+<tr bgcolor="d5878c">  <td>20/03/27 16:50:29</td>   <td>8407</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TesteCadastro.TesteCadastroNegativo()[pri:0, instance:br.com.rsi.hub3.automacao.tdd.testes.TesteCadastro@3a079870]">TesteCadastroNegativo</td> 
+  <td>main@603443293</td>   <td></td> </tr>
+<tr bgcolor="d5878c">  <td>20/03/27 16:50:51</td>   <td>30485</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TesteCadastro.finalizar()[pri:0, instance:br.com.rsi.hub3.automacao.tdd.testes.TesteCadastro@3a079870]">&lt;&lt;finalizar</td> 
+<td>&nbsp;</td>  <td>main@603443293</td>   <td></td> </tr>
+<tr bgcolor="d5878c">  <td>20/03/27 16:50:54</td>   <td>33852</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TesteCadastro.inicializar()[pri:0, instance:br.com.rsi.hub3.automacao.tdd.testes.TesteCadastro@3a079870]">&gt;&gt;inicializar</td> 
+<td>&nbsp;</td>  <td>main@603443293</td>   <td></td> </tr>
+<tr bgcolor="d5878c">  <td>20/03/27 16:51:03</td>   <td>42566</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TesteCadastro.TesteCadastroPositivo()[pri:0, instance:br.com.rsi.hub3.automacao.tdd.testes.TesteCadastro@3a079870]">TesteCadastroPositivo</td> 
+  <td>main@603443293</td>   <td></td> </tr>
+<tr bgcolor="d5878c">  <td>20/03/27 16:51:34</td>   <td>72915</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TesteCadastro.finalizar()[pri:0, instance:br.com.rsi.hub3.automacao.tdd.testes.TesteCadastro@3a079870]">&lt;&lt;finalizar</td> 
+<td>&nbsp;</td>  <td>main@603443293</td>   <td></td> </tr>
 </table>
