--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,3 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>br.com.rsi.hub3.automacao.tdd.testes.TesteConsultaLupa.TesteConsultaLupaPositivo</td></tr>
 </table>
