--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,16 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d5878c">  <td>20/03/27 16:50:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TesteCadastro.inicializar()[pri:0, instance:br.com.rsi.hub3.automacao.tdd.testes.TesteCadastro@3a079870]">&gt;&gt;inicializar</td> 
-<td>&nbsp;</td>  <td>main@603443293</td>   <td></td> </tr>
-<tr bgcolor="d5878c">  <td>20/03/27 16:50:29</td>   <td>8407</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TesteCadastro.TesteCadastroNegativo()[pri:0, instance:br.com.rsi.hub3.automacao.tdd.testes.TesteCadastro@3a079870]">TesteCadastroNegativo</td> 
-  <td>main@603443293</td>   <td></td> </tr>
-<tr bgcolor="d5878c">  <td>20/03/27 16:50:51</td>   <td>30485</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TesteCadastro.finalizar()[pri:0, instance:br.com.rsi.hub3.automacao.tdd.testes.TesteCadastro@3a079870]">&lt;&lt;finalizar</td> 
-<td>&nbsp;</td>  <td>main@603443293</td>   <td></td> </tr>
-<tr bgcolor="d5878c">  <td>20/03/27 16:50:54</td>   <td>33852</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TesteCadastro.inicializar()[pri:0, instance:br.com.rsi.hub3.automacao.tdd.testes.TesteCadastro@3a079870]">&gt;&gt;inicializar</td> 
-<td>&nbsp;</td>  <td>main@603443293</td>   <td></td> </tr>
-<tr bgcolor="d5878c">  <td>20/03/27 16:51:03</td>   <td>42566</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TesteCadastro.TesteCadastroPositivo()[pri:0, instance:br.com.rsi.hub3.automacao.tdd.testes.TesteCadastro@3a079870]">TesteCadastroPositivo</td> 
-  <td>main@603443293</td>   <td></td> </tr>
-<tr bgcolor="d5878c">  <td>20/03/27 16:51:34</td>   <td>72915</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TesteCadastro.finalizar()[pri:0, instance:br.com.rsi.hub3.automacao.tdd.testes.TesteCadastro@3a079870]">&lt;&lt;finalizar</td> 
-<td>&nbsp;</td>  <td>main@603443293</td>   <td></td> </tr>
+<tr bgcolor="67a8a9">  <td>20/03/27 17:30:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TesteConsultaLupa.inicializar()[pri:0, instance:br.com.rsi.hub3.automacao.tdd.testes.TesteConsultaLupa@5ad851c9]">&gt;&gt;inicializar</td> 
+<td>&nbsp;</td>  <td>main@6320204</td>   <td></td> </tr>
+<tr bgcolor="67a8a9">  <td>20/03/27 17:30:29</td>   <td>10174</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TesteConsultaLupa.TesteConsultaLupaNegativo()[pri:0, instance:br.com.rsi.hub3.automacao.tdd.testes.TesteConsultaLupa@5ad851c9]">TesteConsultaLupaNegativo</td> 
+  <td>main@6320204</td>   <td></td> </tr>
+<tr bgcolor="67a8a9">  <td>20/03/27 17:30:37</td>   <td>18259</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TesteConsultaLupa.finalizar()[pri:0, instance:br.com.rsi.hub3.automacao.tdd.testes.TesteConsultaLupa@5ad851c9]">&lt;&lt;finalizar</td> 
+<td>&nbsp;</td>  <td>main@6320204</td>   <td></td> </tr>
 </table>
