--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="67a8a9">  <td>20/03/27 17:30:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TesteConsultaLupa.inicializar()[pri:0, instance:br.com.rsi.hub3.automacao.tdd.testes.TesteConsultaLupa@5ad851c9]">&gt;&gt;inicializar</td> 
-<td>&nbsp;</td>  <td>main@6320204</td>   <td></td> </tr>
-<tr bgcolor="67a8a9">  <td>20/03/27 17:30:29</td>   <td>10174</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TesteConsultaLupa.TesteConsultaLupaNegativo()[pri:0, instance:br.com.rsi.hub3.automacao.tdd.testes.TesteConsultaLupa@5ad851c9]">TesteConsultaLupaNegativo</td> 
-  <td>main@6320204</td>   <td></td> </tr>
-<tr bgcolor="67a8a9">  <td>20/03/27 17:30:37</td>   <td>18259</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TesteConsultaLupa.finalizar()[pri:0, instance:br.com.rsi.hub3.automacao.tdd.testes.TesteConsultaLupa@5ad851c9]">&lt;&lt;finalizar</td> 
-<td>&nbsp;</td>  <td>main@6320204</td>   <td></td> </tr>
+<tr bgcolor="c87990">  <td>20/03/27 18:18:48</td>   <td>0</td> <td title="&gt;&gt;TesteConsultaLupa.iniciarReport()[pri:0, instance:br.com.rsi.hub3.automacao.tdd.testes.TesteConsultaLupa@13acb0d1]">&gt;&gt;iniciarReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1653844940</td>   <td></td> </tr>
+<tr bgcolor="c87990">  <td>20/03/27 18:18:48</td>   <td>80</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TesteConsultaLupa.inicializar()[pri:0, instance:br.com.rsi.hub3.automacao.tdd.testes.TesteConsultaLupa@13acb0d1]">&gt;&gt;inicializar</td> 
+<td>&nbsp;</td>  <td>main@1653844940</td>   <td></td> </tr>
+<tr bgcolor="c87990">  <td>20/03/27 18:18:57</td>   <td>8985</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TesteConsultaLupa.TesteConsultaLupaNegativo()[pri:0, instance:br.com.rsi.hub3.automacao.tdd.testes.TesteConsultaLupa@13acb0d1]">TesteConsultaLupaNegativo</td> 
+  <td>main@1653844940</td>   <td></td> </tr>
+<tr bgcolor="c87990">  <td>20/03/27 18:19:03</td>   <td>14910</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TesteConsultaLupa.finalizar(org.testng.ITestResult)[pri:0, instance:br.com.rsi.hub3.automacao.tdd.testes.TesteConsultaLupa@13acb0d1]">&lt;&lt;finalizar</td> 
+<td>&nbsp;</td>  <td>main@1653844940</td>   <td></td> </tr>
+<tr bgcolor="c87990">  <td>20/03/27 18:19:04</td>   <td>16147</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TesteConsultaLupa.inicializar()[pri:0, instance:br.com.rsi.hub3.automacao.tdd.testes.TesteConsultaLupa@13acb0d1]">&gt;&gt;inicializar</td> 
+<td>&nbsp;</td>  <td>main@1653844940</td>   <td></td> </tr>
+<tr bgcolor="c87990">  <td>20/03/27 18:19:13</td>   <td>24575</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TesteConsultaLupa.TesteConsultaLupaPositivo()[pri:0, instance:br.com.rsi.hub3.automacao.tdd.testes.TesteConsultaLupa@13acb0d1]">TesteConsultaLupaPositivo</td> 
+  <td>main@1653844940</td>   <td></td> </tr>
+<tr bgcolor="c87990">  <td>20/03/27 18:19:19</td>   <td>30850</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TesteConsultaLupa.finalizar(org.testng.ITestResult)[pri:0, instance:br.com.rsi.hub3.automacao.tdd.testes.TesteConsultaLupa@13acb0d1]">&lt;&lt;finalizar</td> 
+<td>&nbsp;</td>  <td>main@1653844940</td>   <td></td> </tr>
+<tr bgcolor="c87990">  <td>20/03/27 18:19:20</td>   <td>32065</td> <td title="&lt;&lt;TesteConsultaLupa.finalizarReport()[pri:0, instance:br.com.rsi.hub3.automacao.tdd.testes.TesteConsultaLupa@13acb0d1]">&lt;&lt;finalizarReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1653844940</td>   <td></td> </tr>
 </table>
